k8s/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ytdl-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ytdl
      component: worker
  template:
    metadata:
      labels:
        app: ytdl
        component: worker
    spec:
      containers:
        - name: ytdl-worker
          image: pi.home:30500/ddanielgal/ytdl:latest
          command: ["bun", "run", "src/worker/worker.ts"]
          volumeMounts:
            - name: ytdlq
              mountPath: /app/data
            - name: ytdl-config
              mountPath: /etc/ytdl
      volumes:
        - name: ytdlq
          persistentVolumeClaim:
            claimName: ytdlq
        - name: ytdl-config
          persistentVolumeClaim:
            claimName: ytdl-config
