k8s/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ytdl-webapp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ytdl
      component: app
  template:
    metadata:
      labels:
        app: ytdl
        component: app
    spec:
      containers:
        - name: ytdl-webapp
          image: ytdl:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: data-volume
          mountPath: /app/data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: ytdl-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ytdl-webapp-service
  namespace: default
spec:
  selector:
    app: ytdl
    component: app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
