k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ytdl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ytdl
      component: app
  template:
    metadata:
      labels:
        app: ytdl
        component: app
    spec:
      containers:
        - name: ytdl
          image: pi.home:30500/ddanielgal/ytdl:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ytdl
spec:
  selector:
    app: ytdl
    component: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ytdl
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ytdl.mink.lan
      secretName: ytdl-tls
  rules:
    - host: ytdl.mink.lan
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ytdl
                port:
                  number: 80
